<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ReplaceSourceFile</class>
 <widget class="QDialog" name="ReplaceSourceFile">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>198</width>
    <height>97</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>ReplaceSourceFile</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="lblFindText">
       <property name="minimumSize">
        <size>
         <width>75</width>
         <height>0</height>
        </size>
       </property>
       <property name="text">
        <string>Find Text</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="iptFindName"/>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QLabel" name="lblReplaceText">
       <property name="minimumSize">
        <size>
         <width>75</width>
         <height>0</height>
        </size>
       </property>
       <property name="text">
        <string>Replace With</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="iptReplaceName"/>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QPushButton" name="btnDoReplace">
     <property name="text">
      <string>Execute</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
